site/components/ui/HeroCover/HeroCover.module.css
.root {
  @apply relative w-[full] h-[30vh] md:h-[50vh] lg:h-[52vh] xl:h-[95vh] -mb-[1.75em] lg:-mb-[-6.75em] xl:-mb-[3.75em];
  /* @apply flex flex-col mx-auto w-full h-[10vh]; */
}

.title {
  @apply text-accent-0 font-extrabold text-4xl leading-none tracking-tight;
}

.description {
  @apply mt-4 text-xl leading-8 text-accent-2 mb-1 lg:max-w-4xl;
}

@screen lg {
  .root {
    @apply flex-row items-start justify-center;
  }
  .title {
    @apply text-5xl max-w-xl text-right leading-10 -mt-3;
    line-height: 3.5rem;
  }
  .description {
    @apply mt-0 ml-6;
  }
}

@screen xl {
  .title {
    @apply text-6xl;
  }
}

